--- a/main.css
+++ b/main.css
@@ -146,12 +146,14 @@ ol.pagination li a {
 }
 
 .part7-float {
+  display: block;
   float: left;
+  padding-right: 7px;
 }
 
 .subcomment {
-  display: block;
-  padding-left: 3px;
+  padding-top: 20px;
+  margin-left: 90px;
 }
 
 
