--- a/main.css
+++ b/main.css
@@ -184,6 +184,31 @@ ol.pagination li a {
 
 .active {
   background-color: lightblue;
+  opacity: 0.75;
+}
+
+.shadowbox-bg {
+  position: absolute;
+  background-color: darkgray;
+  width: 100%;
+  height: 315px;
+}
+
+.shadowbox-fg {
+  position: relative;
+  align: center;
+  margin-top: 30px;
+  background-color: white;
+  padding: 30px 30px 80px 50px;
+  margin: 20px 50px 50px 50px; 
+  border: solid 0px;
+  width: 70%;
+  vertical-align: middle;
+  border-radius: 25px;
+}
+
+.align-right {
+  float: right;
 }
 
 
